<resources>
    <string name="app_name">BookSwap</string>
    <string name="logo">logo</string>
    <string name="afegir_llibre">Afegir Llibre</string>
    <string name="assignatura">Assignatura:</string>
    <string name="campCurs">Curs:</string>
    <string name="editorialCamp">Editorial:</string>
    <string name="idiomaCamp">Idioma</string>
    <string name="fotoCamp">Foto:</string>
    <string name="guardarText">Guardar</string>
    <string name="login_adresa">Adreça electrònica:</string>
    <string name="accedir">Accedir</string>
    <string name="registre">Registre</string>
    <string name="contrasenya">Clau:</string>
    <string name="titolCamp">Titol:</string>
    <string name="imatgeCamera">Camera Foto</string>
    <string name="buscar">Filtrar</string>
    <string name="titolEditTextEspais">&#160;&#160;Titol</string>
    <string name="els_meus_llibres">Els meus llibres</string>
    <string name="imgCardView">Imatge que canvia segons el llibre</string>
    <string name="telefonCamp">Mòbil:</string>
    <string name="despres">Després</string>
    <string name="poblaci">Població</string>
    <string name="introduccio">L\'aplicació Book Swap és una eina molt útil per intercanviar, vendre o donar llibres escolars entre usuaris.</string>
    <string name="obligacioLogin">Introdueixi el telèfon per continuar.</string>
    <string name="benvinguda">BENVINGUTS A BOOK SWAP</string>
    <string name="dadesomplertes">Introdueix el telèfon per continuar</string>
    <string name="telefonoksnack">El telèfon ha de tenir 9 dígits</string>
    <string name="camp_estat">Estat:</string>
    <string name="sortir">Sortir</string>
    <string name="camp_nom">Nom:</string>
    <string name="modificar_dades">Modificar dades</string>
    <string name="actualitzar">Actualitzar</string>
    <string name="elminar_compte">Eliminar Compte</string>
    <string name="alert_modificar_dades">Vols modificar les teves dades?</string>
    <string name="acceptar">acceptar</string>
    <string name="cancelar">cancelar</string>
    <string name="alert_baixa_dades">Vols eliminar el teu compte de Book Swap?</string>
    <string name="seleccionarPoblacio">Seleccionar Població</string>
    <string name="poblacioIncompleta">Per continuar introdueix la població</string>
    <string name="canvi_nom">Introdueix el nom per continuar</string>
    <string name="seleccionarAssignatura">Totes les Assignatures</string>
    <string name="seleccionarCurs">Tots els Cursos</string>
    <string name="totesPoblacions">Totes les Poblacions</string>
    <string name="filtrarLlibres">Prem el botó filtrar per obtenir els llibres de la teva població.</string>
    <string name="poblacioDosPunts">Població:</string>
    <string name="contacte">Contacte:</string>
    <string name="valorar_usuari">Valorar Usuari</string>
    <string name="whatssapp">WhatsApp</string>
    <string name="seleccionaEstat">Selecciona Estat</string>
    <string name="disponible">Disponible</string>
    <string name="noDisponible">No disponible</string>
    <string name="modifica_llibre">Modifica el teu llibre</string>
    <string name="puntuaciDosPunts">Puntuació:</string>
    <string name="dadesCorrectes">Dades actualitzades correctament</string>
    <string name="esborrarUsuaris">Esborrar Usuaris</string>
    <string name="esborrar">Esborrar</string>
    <string name="expulsat">Has sigut expulsat de Book Swap!</string>
    <string name="expulsatTitol">Expulsat</string>
    <string name="filtrarLlibresBuit">No hi ha llibres disponibles per aquesta recerca</string>
    <string name="omplirCamps">"Has d'omplir tots els camps"</string>
    <string name="errorFoto">Error al guardar la foto</string>
    <string name="seleccionaCurs">"Selecciona un curs"</string>
    <string name="permisosCamara">Has denegat els permisos de la camara</string>
    <string name="infoCamara">Els pots modificar a la configuració del mòbil</string>
    <string name="esborrat">Eliminat!</string>
    <string name="llibreEsborrat">Llibre eliminat!</string>
    <string name="valoracioGuardada">Valoració guardada</string>
    <string name="errorValoracio">Error al guardar la valoració</string>
    <string name="seleccionaAssignatura">Selecciona una assignatura</string>
    <string name="llibres">Llibres</string>
    <string name="perfil">Perfil</string>
    <string name="inici">Inici Sessió</string>
    <string name="llistat">Llistat Llibres</string>
    <string name="modificar_usuari">Modificar Usuari</string>
    <string name="modificar_llibre">Modificar Llibre</string>
    <string name="veure_llibre">Veure Llibre</string>
    <string name="valoracions">Valoracions</string>
    <string name="introdueix_llibre">Introdueix llibre</string>
    <string name="llibreModificat" translatable="false">Llibre Modificat!</string>
    <string name="llibre_afegit" translatable="false">LLibre afegit!</string>
    <string name="snacbar_modificar_llibre" translatable="false">Vols modificar aquest llibre?</string>
</resources>