<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modificarusuari.ModificarUsuari">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundbook">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="161dp"
                android:layout_height="134dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bookswaplogo" />

            <TextView
                android:id="@+id/txtModificarDades"
                style="@style/titolPrincipal"
                android:text="@string/modificar_dades"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textViewNom"
                style="@style/CampsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/camp_nom"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextNomModificar"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewPoblació"
                style="@style/CampsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/poblaci"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextPoblacioModificar"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewTelefon"
                style="@style/CampsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/telefonCamp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextTelefonModificar"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewContrasenya"
                style="@style/CampsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/contrasenya"
                app:layout_constraintBaseline_toBaselineOf="@+id/editTextContrasenyaModificar"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/bttnSingOut"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:text="@string/sortir"
                app:layout_constraintBaseline_toBaselineOf="@+id/bttnActualitzar"
                app:layout_constraintStart_toEndOf="@+id/bttnActualitzar" />

            <EditText
                android:id="@+id/editTextNomModificar"
                style="@style/EditTexts"
                android:layout_width="227dp"
                android:layout_height="37dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtModificarDades"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextPoblacioModificar"
                style="@style/EditTexts"
                android:layout_width="226dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNomModificar"
                tools:ignore="LabelFor" />

            <Spinner
                android:id="@+id/spnPoblacio"
                style="@style/EditTexts"
                android:layout_width="226dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNomModificar"/>

            <EditText
                android:id="@+id/editTextTelefonModificar"
                style="@style/EditTexts"
                android:layout_width="226dp"
                android:layout_height="37dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPoblacioModificar"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextContrasenyaModificar"
                style="@style/EditTexts"
                android:layout_width="225dp"
                android:layout_height="38dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTelefonModificar"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/bttnActualitzar"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="30dp"
                android:text="@string/actualitzar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bttnSingOut"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewContrasenya" />

            <Button
                android:id="@+id/bttnBaixaUsuari"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="20dp"
                android:text="@string/elminar_compte"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bttnSingOut" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>