<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".veurellibre.VeureLlibre">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundbook"
            tools:ignore="ExtraText">

            <ImageView
                android:id="@+id/imageViewLlibre"
                android:layout_width="198dp"
                android:layout_height="194dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/imatgeCamera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitolAfegirLlibre"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/txtTitolAfegirLlibre"
                style="@style/titolPrincipal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtLogin"
                style="@style/CampsText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/assignatura"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLlibre" />

            <TextView
                android:id="@+id/txtCurs"
                style="@style/CampsText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/campCurs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

            <TextView
                android:id="@+id/txtEditorial"
                style="@style/CampsText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/editorialCamp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCurs" />

            <TextView
                android:id="@+id/txtCompartir"
                style="@style/CampsText"
                android:layout_width="90dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/compartir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtValoracioUsuari" />

            <TextView
                android:id="@+id/txtValoracioUsuari"
                style="@style/CampsText"
                android:layout_width="105dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/puntuaciDosPunts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEditorial" />

            <TextView
                android:id="@+id/editCurs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginEnd="20dp"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtCurs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtCurs" />

            <TextView
                android:id="@+id/editEditorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="47dp"
                android:layout_marginEnd="20dp"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtEditorial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtEditorial" />

            <ImageButton
                android:id="@+id/bttnWhatsapp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/whatssapp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtValoracioUsuari"
                app:srcCompat="@drawable/whatsapp" />

            <RatingBar
                android:id="@+id/ratingBarPuntuacio"
                android:layout_width="240dp"
                android:layout_height="44dp"
                android:numStars="5"
                android:stepSize="0.5"
                android:progressTint="#FFEB3B"
                android:progressBackgroundTint="@color/cardview_dark_background"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:isIndicator="true"
                app:layout_constraintStart_toEndOf="@+id/txtValoracioUsuari"
                app:layout_constraintTop_toBottomOf="@+id/editEditorial" />

            <Button
                android:id="@+id/bttnValorar"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/valorar_usuari"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bttnWhatsapp"/>
                <!-- android:visibility="invisible"-->

            <TextView
                android:id="@+id/edAssignatura"
                android:layout_width="255dp"
                android:layout_height="19dp"
                android:layout_marginStart="17dp"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtLogin"
                app:layout_constraintStart_toEndOf="@+id/txtLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>